--- a/programa.html
+++ b/programa.html
@@ -113,21 +113,13 @@
     <h1>
         videos
     </h1>
-    <div class="ex-basic-1 pt-5 pb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-fluid mt-5 mb-3" src="images/Imagen1.png" alt="alternative">
-                </div>
-            </div> <!-- end of col -->
-                <div class="col-lg-5">
-                    <div class="text-container">
-                        <h4>Aquí se encontrara la descripción general de lo que se encontrara en cada recorrido turístico</h4>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
+    <div class="video">
+        <iframe width="1200em" height="600em"  src="https://www.youtube.com/embed/w61t-1A51M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h3>¡recuerda abrir esta experiencia desde un dispositivo movil!</h3>
+        <p>al este ser un rpototipo de como deberia verse en un principio el programa se opto por usar un video ya existente tomado de la plataforma youtube lo ideal seria crear recorridos propios los cuales permitan una mayor inmercion></p>
     </div>
+    
+    
 
 
         <div class="footer">
