--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="h1-large">Tu eres la mayor frontera al mundo</h1>
+                        <h1 class="h1-large">y ahora <br> ¿cual es tu excusa?</h1>
                         <a class="btn-solid-lg" href="#introduction">¿Empezamos?</a>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -100,7 +100,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">¿De qué se trata este proyecto?</h2>
-                    <p class="p-heading">Aquí lo que se quiere lograr es cambiar el mundo del turismo a nivel global con la posibilidad de viajar desde tu casa, porque sabemos que no siempre se podra hacer un gran viaje para relajarte.</p>
+                    <p class="p-heading">este proyecto busca que ya no tengamos excusas para conocer ese lugar que no hemos podido permitirnos cococer ya sea por falta de dinoero o de tiempo pues sabemos que al viajar se requiere pagar grandes sumas ademas de tener como munimo una semana sabiendo que este tiempo es bastante corto para ello.<br>
+                        por esta razon es que llega Yui un proyecto que busca a travez de en un principio tecnologia VR dar la posivilidad de conocer esos lugares que nos es imposible visitar en persona esto como una alternativa mas barata y que no demande tanto tiempo permitiendonos hacerlo en nuestro tiempo.<br>
+                        el nombre del proyecto igual que parte de la inspiracion para este proviene de el anime <b>Sword Art Online</b> enel cual luego de que pase algo de la historia podemos ver a yui a quien le generan una alternativa para que esta pueda conocer el mundo real pues la misma es una inteligencia artificial la cual tiene una conciencia y la emnte de una niña
+                    </p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -109,28 +112,6 @@
     </div> <!-- end of cards-1 -->
     <!-- end of introduction -->
 
-
-    <!-- Details -->
-	
-    <div id="services" class="basic-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/sao.jpg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                 </div> <!-- end of col -->
-                <div class="col-lg-5">
-                    <div class="text-container">
-                        <h2>¿De donde salió la idea?</h2>
-                        <a class="btn-solid-lg" href="porque_lo_hago.html">¡Clic para más del tema!</a>
-                    </div> 
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- end of details -->
 
 
     <!-- Services 1 -->
@@ -145,7 +126,9 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>¿Qué es SAO?</h2>
-                        <p>Sword Art Online tambien conocido como SAO es un anime en el cual habla de la historia de Kirito y como hace todo lo posible por salvar a Azuna en el mundo digital</p>
+                        <p>Sword Art Online es una serie de anime que se desarrolla en un futuro cercano, donde los jugadores pueden sumergirse en un mundo virtual de realidad virtual llamado "Sword Art Online" (SAO). En la primera temporada, el protagonista, Kirito, se embarca en una emocionante aventura dentro del juego.</p>
+                        
+                        <a class="read-more no-line green" href="https://chat.openai.com/share/1988e2ee-a4f0-490e-a52b-de11264ce9df"target=_blank>Conocer mas sobre la serie<span class="fas fa-long-arrow-alt-right"></span></a><br>
                         <a class="read-more no-line green" href="https://www.crunchyroll.com/es/sword-art-online"target=_blank>Ver sword art online (SAO)<span class="fas fa-long-arrow-alt-right"></span></a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -164,8 +147,8 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h4>¿Quién es Yui?</h4>
-                        <p>Yui es un programa creado por los servidores de S.A.O, que durante la historia se encuentra con nuestro protagonista, Si quieres saber más sobre esto has clic abajo.</p>
-                        <a class="read-more no-line green" href="https://www.crunchyroll.com/es/sword-art-online"target=_blank>conose mas sobre este personaje en SAO<span class="fas fa-long-arrow-alt-right"></span></a>
+                        <p>Yui es un personaje ficticio en la serie de anime y novelas ligeras "Sword Art Online". Aunque no tiene una apariencia física tangible debido a su naturaleza como una IA (Inteligencia Artificial) en forma de niña, Yui desempeña un papel crucial en la trama de la serie.</p>
+                        <a class="read-more no-line green" href="https://chat.openai.com/share/0d8a2710-3f88-4199-961d-5d8a3df669f0"target=_blank>conose mas sobre este personaje <span class="fas fa-long-arrow-alt-right"></span></a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
