--- a/porque_lo_hago.html
+++ b/porque_lo_hago.html
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <h2 class="mt-5 mb-3">¿De dónde salió la idea del proyecto Yui?</h2>
-                    <p class="mb-5">El proyecto Yui sale de una idea originaria del mismo anime, sin embargo, la idea original de kirito es la unión de una cámara de 360° con un servidor donde se encuentra Yui y después por petición de Azuna lo enlaza con una clase de nerve gear modificado para el uso médico para que una chica pudiese ver su casa y recorrer la ciudad una vez más, al modificar este proyecto para el turismo se quiere usar su idea base de las cámaras de vista de 360°, un guía turístico que cargue todo el equipo y tenga un intercomunicador con el cual pueda comunicarse con el usuario para contarle la historia, incluso, sería ideal que muchas personas estén conectadas al mismo recorrido y vean todo con una misma cámara, pero en el caso de no ser posible se ampliarían los empleos en el sector turístico con el incremento de empleo que tendrían los guías para esta aplicación.</p>
+                    <p class="mb-5">como ya lo mencione anteriormente la idea de este proyecto nace de necesidades vistas desde mi perspectiva personal a los cuales en parte gracias a influencias externas llegue a esta posible solucion.</p>
                     <div id="services" class="basic-1">
                         <div class="container">
                             <div class="row">
@@ -114,7 +114,7 @@
                                     </div> <!-- end of image-container -->
                                 </div> <!-- end of col -->
                                         <h3>Como comenzó la idea de este proyecto</h3>
-                                        <p class="mb-5">En un principio a mí solo me apasionaba la programación y al ver sao esta pasión solo creció, al entrar al programa de disruptores lab, se me da una beca con la UPB de economía naranja, en la cual tenía que idear un proyecto. La idea pricipal era la elaboración de un nerve gear, pero en la investigación sobre esto, descubrí el proyecto sao y más tarde pensé que podría hacer, después de hablar con Saris (mi mentora) ella me proporciona una ayuda muy valiosa, pues me orientó para hallar este nuevo proyecto, proyecto que me encuentro desarrollándo.</p>
+                                        <p class="mb-5">en un  principio eta posible solucion era bastante descabellada puesto a que pensaba en usar equipos que ademas de costosos erean imposibles de transportar de forma eficas pero gracias a diversas mentorias y ayudas de los diferentes asesores de los diplomados me an ayudado a aterrizar la misma hasta el punto donde se encuentra el dia de hoy y con la expectativa de llegar a un producto final el cual se pueda ver a nivel pais.</p>
                             </div>
                         </div>
                     </div>
