--- a/instrucciones.html
+++ b/instrucciones.html
@@ -114,9 +114,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <p>Como podemos observar hay un video con flechas, en este apartado de la página explicaré como funciona este programa y porque lo que quiero es algo basado en “SAO”, usare videos pre grabados, esto debido a que al no tener los recursos y estudios necesarios para realizar dicho proyecto en su totalidad me encuentro desarrollando la base de dicho programa de una forma más sencilla y lo que se espera es que en un futuro se logre llegar a desarrollar el proyecto en su totalidad. </p>
                     <h2 class="mb-3">Como funciona este programa</h2>
-                    <p>Este programa consta de un video interactivo, el cual te da un recorrido por cierta parte de la ciudad y al llegar a cierto punto especifico te mostrará opciones para continuar ya sea de frente, hacía la derecha o izquierda para seguir con el recorrido y así permitirte conocer alguna ciudad.</p>
+                    <p>en si el funcionamiento de este prototipo es simple lo que se debe hacer es habrir la paginas desde un dispositivop movil teniendo en cuenta que debe tener a mano un casco vr y auriculares, luego de esto colocar el video del recorrido iniciarlo y ajus</p>
                     <h2 class="mb-3">¿Qué recorridos hay?</h2>
                     <p class="mb-4">En un principio solo se ofrecerá un recorrido base, pero si quieres hacer tu propio recorrido y que más personas conozcan tu ciudad escríbeme al correo j.alvarez2868@gmail.com diciendo tu nombre y el porqué te gustaría que se mostrara tu recorrido, ¡espera una respuesta!.</p>
                 </div> <!-- end of col -->
