--- a/instrucciones.html
+++ b/instrucciones.html
@@ -115,9 +115,9 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <h2 class="mb-3">Como funciona este programa</h2>
-                    <p>en si el funcionamiento de este prototipo es simple lo que se debe hacer es habrir la paginas desde un dispositivop movil teniendo en cuenta que debe tener a mano un casco vr y auriculares, luego de esto colocar el video del recorrido iniciarlo y ajus</p>
+                    <p>en si el funcionamiento de este prototipo es simple lo que se debe hacer es habrir la paginas desde un dispositivop movil teniendo en cuenta que debe tener a mano un casco vr y auriculares, luego de esto colocar el video del recorrido conectar el dispositivo a los auriculares y colocarlo en el casco para luego colocarse este junto con los audifonos y despausar desde estos el video para asi disfrutar la experiencia.</p>
                     <h2 class="mb-3">¿Qué recorridos hay?</h2>
-                    <p class="mb-4">En un principio solo se ofrecerá un recorrido base, pero si quieres hacer tu propio recorrido y que más personas conozcan tu ciudad escríbeme al correo j.alvarez2868@gmail.com diciendo tu nombre y el porqué te gustaría que se mostrara tu recorrido, ¡espera una respuesta!.</p>
+                    <p class="mb-4">como ya se a mencionado an tes hasta el momento solo se cuenta con un recorrido prototipo el cual no es de autoria propia, por otra parte lo que se espera en un futuro es empezar a gravar editar y publicar recorridos propios para asi dar mas variedad a los usuarios.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
