--- a/msm.html
+++ b/msm.html
@@ -176,7 +176,7 @@
                            
                     </div>
                 </div>
-                    <h2>Estas son algunas de las personas que me han acompañado durante todo este proceso</h2>
+                    <h2>Estas son algunas de las personas que me han acompañado durante todo este proceso.</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
