--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h2 class="h2-heading">¿De qué se trata este proyecto?</h2>
                     <p class="p-heading">este proyecto busca que ya no tengamos excusas para conocer ese lugar que no hemos podido permitirnos cococer ya sea por falta de dinoero o de tiempo pues sabemos que al viajar se requiere pagar grandes sumas ademas de tener como munimo una semana sabiendo que este tiempo es bastante corto para ello.<br>
                         por esta razon es que llega Yui un proyecto que busca a travez de en un principio tecnologia VR dar la posivilidad de conocer esos lugares que nos es imposible visitar en persona esto como una alternativa mas barata y que no demande tanto tiempo permitiendonos hacerlo en nuestro tiempo.<br>
-                        el nombre del proyecto igual que parte de la inspiracion para este proviene de el anime <b>Sword Art Online</b> enel cual luego de que pase algo de la historia podemos ver a yui a quien le generan una alternativa para que esta pueda conocer el mundo real pues la misma es una inteligencia artificial la cual tiene una conciencia y la emnte de una niña
+                        el nombre del proyecto igual que parte de la inspiracion para este proviene de el anime <b>Sword Art Online</b> enel cual luego de que pase algo de la historia podemos ver a yui a quien le generan una alternativa para que esta pueda conocer el mundo real pues la misma es una inteligencia artificial la cual tiene una conciencia y la mente de una niña.
                     </p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
