--- a/programa.html
+++ b/programa.html
@@ -114,7 +114,7 @@
         videos
     </h1>
     <div class="video">
-        <iframe width="1200em" height="600em"  src="https://www.youtube.com/embed/w61t-1A51M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width= 100% height= 100% src="https://www.youtube.com/embed/w61t-1A51M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h3>¡recuerda abrir esta experiencia desde un dispositivo movil!</h3>
         <p>al este ser un rpototipo de como deberia verse en un principio el programa se opto por usar un video ya existente tomado de la plataforma youtube lo ideal seria crear recorridos propios los cuales permitan una mayor inmercion.</p><br>
     </div>
