--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">¿De qué se trata este proyecto?</h2>
-                    <p class="p-heading">este proyecto busca que ya no tengamos excusas para conocer ese lugar que no hemos podido permitirnos cococer ya sea por falta de dinoero o de tiempo pues sabemos que al viajar se requiere pagar grandes sumas ademas de tener como munimo una semana sabiendo que este tiempo es bastante corto para ello.<br>
-                        por esta razon es que llega Yui un proyecto que busca a travez de en un principio tecnologia VR dar la posivilidad de conocer esos lugares que nos es imposible visitar en persona esto como una alternativa mas barata y que no demande tanto tiempo permitiendonos hacerlo en nuestro tiempo.<br>
-                        el nombre del proyecto igual que parte de la inspiracion para este proviene de el anime <b>Sword Art Online</b> enel cual luego de que pase algo de la historia podemos ver a yui a quien le generan una alternativa para que esta pueda conocer el mundo real pues la misma es una inteligencia artificial la cual tiene una conciencia y la mente de una niña.
+                    <p class="p-heading">
+                        Este proyecto busca que ya no tengamos excusas para conocer ese lugar que no hemos podido permitirnos conocer, ya sea por falta de dinero o de tiempo. Sabemos que al viajar se requiere pagar grandes sumas, además de tener como mínimo una semana, sabiendo que este tiempo es bastante corto para ello.
+                        Por esta razón, llega Yui, un proyecto que busca a través de la tecnología VR, en un principio, dar la posibilidad de conocer esos lugares que nos es imposible visitar en persona. Esto se presenta como una alternativa más barata y que no demande tanto tiempo, permitiéndonos hacerlo en nuestro tiempo.
+                        El nombre del proyecto, así como parte de la inspiración para este, proviene del anime <b>Sword Art Online</b>, en el cual, después de que pase algo de la historia, podemos ver a Yui, a quien le generan una alternativa para que pueda conocer el mundo real, pues ella misma es una inteligencia artificial con la conciencia y la mente de una niña.
                     </p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -169,7 +170,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Proyecto SAO</h2>
-                        <p>Este es un proyecto enfocado en crear el nerve gear o casco de inmersión total, lo que se espera lograr es una alianza con este proyecto (SAO) para así con la posibilidad de los megamapas hacer que el turismo alcance un nuevo nivel</p>
+                        <p>Este es un proyecto enfocado en crear el Nerve Gear o casco de inmersión total. Lo que se espera lograr es una alianza con el proyecto Sword Art Online (SAO) para así, con la posibilidad de los megamapas, hacer que el turismo alcance un nuevo nivel.</p>
                         <a class="read-more no-line green" href="https://starteq.net/proyecto-sao/" target="_blank">Conoce más sobre el proyecto S.A.O<span class="fas fa-long-arrow-alt-right"></span></a>
                         <p>Esta no es la página del proyecto original, pero, tiene una información más extensa sobre el mismo</p>
                     </div> <!-- end of text-container -->
