--- a/instrucciones.html
+++ b/instrucciones.html
@@ -115,9 +115,9 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <h2 class="mb-3">Como funciona este programa</h2>
-                    <p>en si el funcionamiento de este prototipo es simple lo que se debe hacer es habrir la paginas desde un dispositivop movil teniendo en cuenta que debe tener a mano un casco vr y auriculares, luego de esto colocar el video del recorrido conectar el dispositivo a los auriculares y colocarlo en el casco para luego colocarse este junto con los audifonos y despausar desde estos el video para asi disfrutar la experiencia.</p>
+                    <p>En sí, el funcionamiento de este prototipo es simple. Lo que se debe hacer es abrir la página desde un dispositivo móvil, teniendo en cuenta que se debe tener a mano un casco de realidad virtual (VR) y auriculares. Luego, se coloca el video del recorrido y se conecta el dispositivo a los auriculares. A continuación, se coloca el dispositivo en el casco y se coloca este último junto con los audífonos. Finalmente, se despausa el video desde el dispositivo y se puede disfrutar de la experiencia.</p>
                     <h2 class="mb-3">¿Qué recorridos hay?</h2>
-                    <p class="mb-4">como ya se a mencionado antes hasta el momento solo se cuenta con un recorrido prototipo el cual no es de autoria propia, por otra parte lo que se espera en un futuro es empezar a gravar editar y publicar recorridos propios para asi dar mas variedad a los usuarios.</p>
+                    <p class="mb-4">Como ya se mencionó antes, hasta el momento solo se cuenta con un recorrido prototipo, el cual no es de autoría propia. Por otra parte, lo que se espera en un futuro es comenzar a grabar, editar y publicar recorridos propios, con el fin de ofrecer más variedad a los usuarios..</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
