--- a/porque_lo_hago.html
+++ b/porque_lo_hago.html
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <h2 class="mt-5 mb-3">¿De dónde salió la idea del proyecto Yui?</h2>
-                    <p class="mb-5">como ya lo mencione anteriormente la idea de este proyecto nace de necesidades vistas desde mi perspectiva personal a los cuales en parte gracias a influencias externas llegue a esta posible solucion.</p>
+                    <p class="mb-5">Como ya mencioné anteriormente, la idea de este proyecto nace de necesidades vistas desde mi perspectiva personal, a las cuales, en parte, gracias a influencias externas, llegué a esta posible solución.</p>
                     <div id="services" class="basic-1">
                         <div class="container">
                             <div class="row">
@@ -114,7 +114,7 @@
                                     </div> <!-- end of image-container -->
                                 </div> <!-- end of col -->
                                         <h3>Como comenzó la idea de este proyecto</h3>
-                                        <p class="mb-5">en un  principio eta posible solucion era bastante descabellada puesto a que pensaba en usar equipos que ademas de costosos erean imposibles de transportar de forma eficas pero gracias a diversas mentorias y ayudas de los diferentes asesores de los diplomados me an ayudado a aterrizar la misma hasta el punto donde se encuentra el dia de hoy y con la expectativa de llegar a un producto final el cual se pueda ver a nivel pais.</p>
+                                        <p class="mb-5">En un principio, esta posible solución era bastante descabellada, puesto que pensaba en usar equipos que, además de costosos, eran imposibles de transportar de forma eficaz. Sin embargo, gracias a diversas mentorías y ayudas de los diferentes asesores de los diplomados, me han ayudado a aterrizar la idea hasta el punto donde se encuentra el día de hoy, con la expectativa de llegar a un producto final que se pueda ver a nivel nacional.</p>
                             </div>
                         </div>
                     </div>
