--- a/programa.html
+++ b/programa.html
@@ -116,7 +116,7 @@
     <div class="video">
         <iframe width= 100% height= 100% src="https://www.youtube.com/embed/w61t-1A51M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h3>¡recuerda abrir esta experiencia desde un dispositivo movil!</h3>
-        <p>al este ser un rpototipo de como deberia verse en un principio el programa se opto por usar un video ya existente tomado de la plataforma youtube lo ideal seria crear recorridos propios los cuales permitan una mayor inmercion.</p><br>
+        <p>Al ser este un prototipo de cómo debería verse en un principio el programa, se optó por usar un video ya existente tomado de la plataforma YouTube. Sin embargo, lo ideal sería crear recorridos propios que permitan una mayor inmersión.</p><br>
     </div>
     
     
