--- a/msm.html
+++ b/msm.html
@@ -145,6 +145,27 @@
                                 </div> <!-- end of row -->
                             </div> <!-- end of container -->
                         </div>
+
+                        <div id="services" class="basic-1">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-7">
+                                        <div class="image-container">
+                                            <img class="img-fluid" src="images/panda.jpg" alt="alternative">
+                                        </div> <!-- end of image-container -->
+                                    </div> <!-- end of col -->
+                                    <div class="col-lg-5">
+                                        <div class="text-container">
+                                            <h2>panda</h2>
+                                            <p>
+                                                Panda es mi asesor en el ultimo diplomado que me enhcuentro realizando, es alguien a quien e llegado a conasiderar un amigo y un ejemplo a seguir de com,o quisiera ser en un futuro.<br>
+                                                es alguien que me a enseñado muchas cosas y me acompañado durante este proceso de una forma inigualable y a quien le estoy muy agradecido.
+                                            </p>
+                                        </div> <!-- end of text-container -->
+                                    </div> <!-- end of col -->
+                                </div> <!-- end of row -->
+                            </div> <!-- end of container -->
+                        </div>
                         
                        <div id="services" class="basic-1">
                             <div class="container">
