--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="images/Sword Art Online.ico">
+    <link rel="icon" href="images/logotipo.png">
 
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbarExample">
